<resources>
    <string name="app_name">app beber agua</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular Ingestão diária</string>
    <string name="text_button_lembrete">Lembrete</string>
    <string name="text_button_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="alerta_campo_vazio">Preencha todos os campos!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_descricao">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de Beber Água</string>



</resources>