<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bebaagua"
            app:layout_constraintStart_toStartOf="@id/container_header"
            app:layout_constraintTop_toTopOf="@id/container_header" />

        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="@id/container_header"
            app:layout_constraintTop_toTopOf="@id/container_header" />


        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_header" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_peso"
            app:layout_constraintTop_toBottomOf="@id/container_header" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/bg_degrade_button"
            android:padding="15dp"
            android:text="@string/text_button_calcular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_peso" />

        <View
            android:id="@+id/container_resultado_ml"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_calcular" />

        <TextView
            android:id="@+id/text_resultado_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
            app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
            app:layout_constraintTop_toTopOf="@id/container_resultado_ml" />

        <Button
            android:id="@+id/buttom_definir_lembrente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_lembrete"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

        <Button
            android:id="@+id/buttom_alarme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/text_button_alarme"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_resultado_ml" />

        <TextView
            android:id="@+id/text_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_hora"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttom_definir_lembrente" />

        <TextView
            android:id="@+id/text_dois_pontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_dois_pontos"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@id/text_hora"
            app:layout_constraintTop_toBottomOf="@id/buttom_definir_lembrente" />

        <TextView
            android:id="@+id/text_minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_minutos"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintStart_toEndOf="@id/text_dois_pontos"
            app:layout_constraintTop_toBottomOf="@id/buttom_definir_lembrente" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>